--- a/Connector_React/package.json
+++ b/Connector_React/package.json
@@ -2,10 +2,14 @@
   "name": "connectorio",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase": "^10.3.1",
     "mermaid": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
