--- a/Connector_React/package.json
+++ b/Connector_React/package.json
@@ -8,6 +8,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "d3-force": "^3.0.0",
+    "d3-quadtree": "^3.0.1",
+    "dagre": "^0.8.5",
     "express": "^4.18.2",
     "firebase": "^10.3.1",
     "mermaid": "^10.4.0",
